# WhatsThat

./: CMakeLists.txt  Readme.md  main.cpp  testclass.cpp  testclass.h  todo.md  webChan.js  whatsappjsinterface.h
src/: CMakeLists.txt  chat.cpp  chat.h  chatlistjob.cpp  chatlistjob.h  console.cpp  interface.cpp  interface.h  jsinterface.cpp  jsinterface.h  main.cpp  message.cpp  message.h  sendmessagejob.cpp  sendmessagejob.h  webChan.js  whatsappjsinterface.cpp  whatsappjsinterface.h
tool/: CMakeLists.txt  console.cpp  console.h  main.cpp
